# backend/route/routes.php
@@ -21,6 +21,7 @@ Router::get('/communities/{id}/proposals', 'proposalController@allOfCommunity', 
 Router::get('/communities/{id}/membership', 'communityController@isMember', true);
 Router::get('/communities/{id}/budget', 'communityController@budget', true);
 Router::post('/communities/{id}/budget', 'communityController@setBudget', true);
+Router::post('/communities/{id}/themes', 'themeController@store', true);
 
 Router::get('/users', 'userController@index');
 Router::get('/users/{id}', 'userController@show');
